--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
   <section class="reveal">
     <h2 class="section-title"><i class="fas fa-star"></i>Projeto em Destaque</h2>
-    <p>Web HTML Portfolio — <a href="https://github.com/anninhaschmid/anninhaschmid.github.io.git" target="_blank">ver no GitHub</a></p>
+    <p>Web HTML Portfolio — <a href="https://github.com/anninhaschmid/anninhaschmid.github.io" target="_blank">Ver no GitHub</a></p>
   </section>
 
   <section class="reveal">
