Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
   <header>
     <h1>Anna Schmidt</h1>
-    <p class="tagline">Desenvolvedora Front end e Back end Junior</p>
+    <p class="tagline">Desenvolvedora Full Stack Junior</p>
     <div class="highlight-links">
       <a href="https://github.com/anninhaschmid" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/anna-schmidt-790b812b3/" target="_blank">LinkedIn</a>
