--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 </head>
 <body>
   <header>
+    <img src="CAMINHO_PARA_A_IMAGEM" alt="DESCRIÇÃO_DA_IMAGEM">
     <h1>Anna Schmidt</h1>
     <p class="tagline">Desenvolvedora Full Stack Junior</p>
     <div class="highlight-links">
