--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <div class="highlight-links">
       <a href="https://github.com/anninhaschmid" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/anna-schmidt-790b812b3/" target="_blank">LinkedIn</a>
+       <a href="http://lattes.cnpq.br/4136744838187145" target="_blank">Lattes</a>
     </div>
   </header>
 
