--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <a href="https://github.com/anninhaschmid" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/anna-schmidt-790b812b3/" target="_blank">LinkedIn</a>
        <a href=" https://lattes.cnpq.br/4136744838187145" target="_blank">Lattes</a>
-      <a href="https://instragram.com/dev.anninhaschmidt" target="_blank">Instagram</a>
+      <a href="https://instragram.com/annaschmidt.dev" target="_blank">Instagram</a>
     </div>
   </header>
 
