--- a/index.html
+++ b/index.html
@@ -24,177 +24,170 @@
       box-sizing: border-box;
     }
     body {
-      background: url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
-      background-size: cover;
-      color: #f0f0f0;
+      background-color: #fef6f0;
+      color: #333;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      padding: 2rem;
-      min-height: 200vh;
+      overflow-x: hidden;
     }
     header {
-      text-align: center;
-      padding-bottom: 2rem;
-      background-color: rgba(0,0,0,0.6);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding: 2rem;
-      border-radius: 10px;
+      background-color: #fff0f5;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    h1 {
-      font-size: 3.2rem;
-      margin-bottom: 0.3rem;
-      color: #ff4c4c;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    header h1 {
+      font-size: 2rem;
+      color: #a883c9;
     }
-    .tagline {
-      font-size: 1.3rem;
-      color: #ffa6a6;
-      margin-bottom: 1rem;
+    nav {
+      display: flex;
+      gap: 1rem;
+    }
+    nav a {
+      color: #555;
+      text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s ease;
     }
-    .highlight-links {
+    nav a:hover {
+      color: #a883c9;
+    }
+    .intro {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 4rem 2rem;
+      background-color: #fcefee;
+    }
+    .intro-text {
+      max-width: 50%;
+    }
+    .intro-text h2 {
+      font-size: 3rem;
+      color: #222;
+    }
+    .intro-text span {
+      color: #a883c9;
+    }
+    .intro-text p {
+      font-size: 1.2rem;
+      margin: 1rem 0;
+      color: #444;
+    }
+    .btn {
+      display: inline-block;
+      background-color: transparent;
+      border: 2px solid #a883c9;
+      color: #a883c9;
+      padding: 0.6rem 1.2rem;
+      border-radius: 30px;
+      font-weight: bold;
+      text-decoration: none;
+      margin-right: 1rem;
+    }
+    .btn:hover {
+      background-color: #a883c9;
+      color: #fff;
+    }
+    .social-icons {
       margin-top: 1rem;
     }
-    .highlight-links a {
-      display: inline-block;
-      background-color: #1e1e1e;
-      color: #ff4c4c;
-      border: 2px solid #ff4c4c;
-      border-radius: 20px;
-      padding: 0.4rem 1rem;
-      margin: 0.3rem;
+    .social-icons a {
+      color: #a883c9;
+      margin-right: 1rem;
+      font-size: 1.5rem;
+    }
+    section#about, section#projects, section#contact, section#skills {
+      padding: 4rem 2rem;
+      background-color: #ffffff;
+    }
+    section#about h2, section#projects h2, section#contact h2, section#skills h2 {
+      font-size: 2.5rem;
+      color: #a883c9;
+      margin-bottom: 1rem;
+    }
+    section#about p, section#projects p, section#contact p, section#skills p {
+      font-size: 1.2rem;
+      color: #333;
+      line-height: 1.6;
+      max-width: 800px;
+    }
+    .project-list a {
+      display: block;
+      margin-top: 1rem;
+      color: #a883c9;
+      text-decoration: none;
       font-weight: bold;
-      transition: all 0.3s ease;
-      text-decoration: none;
-      animation: pulse 1.5s infinite;
     }
-    .highlight-links a:hover {
-      background-color: #ff4c4c;
-      color: #1e1e1e;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
-
-    section {
-      margin: 2rem 0;
-      opacity: 0;
-      transform: translateX(-40px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-      background-color: rgba(31, 31, 31, 0.9);
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      position: relative;
-    }
-    section.visible {
-      opacity: 1;
-      transform: translateX(0);
-    }
-    .section-title i {
-      margin-right: 0.5rem;
-      color: #ff4c4c;
-    }
-    footer {
-      text-align: center;
-      padding-top: 2rem;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-    a {
-      color: #ffa6a6;
-      text-decoration: none;
-    }
-    a:hover {
+    .project-list a:hover {
       text-decoration: underline;
+    }
+    .skill-list {
+      margin-top: 2rem;
+    }
+    .skill-list li {
+      margin: 0.5rem 0;
+      font-size: 1.2rem;
+      color: #a883c9;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="Adiciona imagem ao index.html" alt="IMG_1802.JPG">
-    <h1>Anna Schmidt</h1>
-    <p class="tagline">Desenvolvedora Full Stack Junior</p>
-    <div class="highlight-links">
-      <a href="https://github.com/anninhaschmid" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/anna-schmidt-790b812b3/" target="_blank">LinkedIn</a>
-       <a href=" https://lattes.cnpq.br/4136744838187145" target="_blank">Lattes</a>
-      <a href="https://www.instagram.com/annaschmidt.dev/" target="_blank">Instagram</a>
-    </div>
+    <h1>Portfolio</h1>
+    <nav>
+      <a href="#about">ABOUT ME</a>
+      <a href="#projects">PROJECTS</a>
+      <a href="#skills">SKILLS</a>
+      <a href="#contact">CONTACT ME</a>
+      <a href="https://www.instagram.com/annaschmidt.dev/" class="btn" target="_blank">Follow Me</a>
+    </nav>
   </header>
 
-  <section class="reveal">
-    <h2 class="section-title"><i class="fas fa-user"></i>Sobre Mim</h2>
-    <p>Sou uma desenvolvedora full stack apaixonada por criar experiências digitais intuitivas e elegantes. Tenho foco especial em front-end moderno, mas também domino back-end com Node.js e Python.</p>
+  <section class="intro">
+    <div class="intro-text">
+      <h2>Olá Devs, meu nome é <br><strong>Anna <span>Schmidt</span></strong></h2>
+      <p>Eu sou desenvolvedora de Software junior</p>
+      <a href="http://lattes.cnpq.br/4136744838187145" class="btn" target="_blank">download cv</a>
+      <div class="social-icons">
+        <a href="https://github.com/anninhaschmid" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/anna-schmidt-790b812b3/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/annaschmidt.dev/" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
   </section>
 
-  <section class="reveal">
-    <h2 class="section-title"><i class="fas fa-code"></i>Habilidades</h2>
-    <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>React, Node.js</li>
-      <li>Git, Python</li>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Olá! Meu nome é Anna Schmidt, sou desenvolvedora full stack com foco em criar experiências digitais funcionais. Tenho especialização em HTML, CSS e JavaScript, com forte domínio em frameworks modernos para front-end e back-end. Trabalho com paixão no desenvolvimento de sites, aplicações web e interfaces, viso sempre buscar transformar ideias em projetos criativos. Também compartilho conteúdo sobre programação e tecnologia no meu Instagram @annaschmidt.dev. 
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-list">
+      <a href="https://github.com/anninhaschmid/anninhaschmid.github.io" target="_blank">🌐 Projeto: Meu site pessoal - GitHub Pages</a>
+      <a href="https://github.com/anninhaschmid/primeiro-projeto-em-py" target="_blank">🌐 Projeto: Primeiro Projeto em Python - GitHub</a>
+    </div>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul class="skill-list">
+      <li>💻 HTML, CSS e JavaScript</li>
+      <li>⚙️ Versionamento com Git e GitHub</li>
+      <li>🧠 Inteligência Artificial</li>
+      <li>💻 Desenvolvimento web</li>
     </ul>
   </section>
 
-  <section class="reveal">
-    <h2 class="section-title"><i class="fas fa-star"></i>Projeto em Destaque</h2>
-    <p>Web HTML Portfolio — <a href="https://github.com/anninhaschmid/anninhaschmid.github.io" target="_blank">Ver no GitHub</a></p>
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcshmidt@gmail.com" style="color: #a883c9; text-decoration: none;">annamcshmidt@gmail.com</a></p>
   </section>
-
-  <section class="reveal">
-    <h2 class="section-title"><i class="fas fa-folder-open"></i>Outros Projetos</h2>
-    <ul>
-      <li>Primeiro Projeto em Python — <a href="https://github.com/anninhaschmid/primeiro-projeto-em-py" target="_blank">Ver no GitHub</a></li>
-    </ul>
-  </section>
-
-  <section class="reveal">
-    <h2 class="section-title"><i class="fas fa-graduation-cap"></i>Formação Acadêmica</h2>
-    <ul>
-      <li><strong>Ensino Médio:</strong> Colégio Marista de Natal</li>
-      <li><strong>Graduação:</strong> Ciência da Computação - Universidade Potiguar (UNP) — desde 2024 (cursando)</li>
-    </ul>
-  </section>
-
-  <section class="reveal">
-    <h2 class="section-title"><i class="fas fa-certificate"></i>Certificações</h2>
-    <ul>
-      <li>SOFTEX Pernambuco Formação Acelerada - UFRN</li>
-    </ul>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Anna Schmidt | <a href="#top">Voltar ao topo</a></p>
-  </footer>
-
-  <script>
-    const sections = document.querySelectorAll(".reveal");
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("visible");
-          observer.unobserve(entry.target);
-        }
-      });
-    }, {
-      threshold: 0.1
-    });
-
-    sections.forEach((section, index) => {
-      section.style.transitionDelay = `${index * 0.2}s`;
-      observer.observe(section);
-    });
-
-    window.addEventListener('load', () => {
-      sections.forEach(section => {
-        if (section.getBoundingClientRect().top < window.innerHeight) {
-          setTimeout(() => section.classList.add("visible"), 100);
-        }
-      });
-    });
-  </script>
 </body>
 </html>
+
