--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio Web de Anna Schmidt</title>
 
-  <meta name="description" content="Portfólio web de Anna Schmidt, desenvolvedora full stack com foco em soluções front-end e back-end.">
+  <meta name="description" content="Portfólio web de Anna Schmidt, Desenvolvedora Full Stack com foco em soluções front-end e back-end.">
   <meta name="author" content="Anna Schmidt">
   <meta name="robots" content="index, follow">
 
   <meta property="og:title" content="Portfólio Web de Anna Schmidt" />
-  <meta property="og:description" content="Portfólio profissional com foco em desenvolvimento front-end, back-end e soluções em Python." />
+  <meta property="og:description" content="Portfólio Profissional com foco em Desenvolvimento front-end, back-end e soluções em Python." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://anninhaschmid.github.io" />
 
