--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
   <header>
     <h1>Portfolio</h1>
     <nav>
-      <a href="#about">ABOUT ME</a>
-      <a href="#projects">PROJECTS</a>
-      <a href="#skills">SKILLS</a>
-      <a href="#contact">CONTACT ME</a>
+      <a href="#about">SOBRE MIM</a>
+      <a href="#projects">PROJETOS</a>
+      <a href="#skills">HABILIDADES</a>
+      <a href="#contact">CONTATO</a>
       <a href="https://www.instagram.com/annaschmidt.dev/" class="btn" target="_blank">Follow Me</a>
     </nav>
   </header>
