--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <a href="#projects">PROJETOS</a>
       <a href="#skills">HABILIDADES</a>
       <a href="#contact">CONTATO</a>
-      <a href="https://www.instagram.com/annaschmidt.dev/" class="btn" target="_blank">Follow Me</a>
+      <a href="https://www.instagram.com/annaschmidt.dev/" class="btn" target="_blank">ME SIGA </a>
     </nav>
   </header>
 
