--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
   </section>
 
   <section id="about">
-    <h2>About Me</h2>
+    <h2>SOBRE MIM</h2>
     <p>
       Olá! Meu nome é Anna Schmidt, sou desenvolvedora full stack com foco em criar experiências digitais funcionais. Tenho especialização em HTML, CSS e JavaScript, com forte domínio em frameworks modernos para front-end e back-end. Trabalho com paixão no desenvolvimento de sites, aplicações web e interfaces, viso sempre buscar transformar ideias em projetos criativos. Também compartilho conteúdo sobre programação e tecnologia no meu Instagram @annaschmidt.dev. 
     </p>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
+  <section id="projetos">
+    <h2>PROJETOS</h2>
     <div class="project-list">
       <a href="https://github.com/anninhaschmid/anninhaschmid.github.io" target="_blank">🌐 Projeto: Meu site pessoal - GitHub Pages</a>
       <a href="https://github.com/anninhaschmid/primeiro-projeto-em-py" target="_blank">🌐 Projeto: Primeiro Projeto em Python - GitHub</a>
     </div>
   </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
+  <section id="habilidades">
+    <h2>HABILIDADES</h2>
     <ul class="skill-list">
       <li>💻 HTML, CSS e JavaScript</li>
       <li>⚙️ Versionamento com Git e GitHub</li>
@@ -184,8 +184,8 @@
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
+  <section id="contato">
+    <h2>CONTATO</h2>
     <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcshmidt@gmail.com" style="color: #a883c9; text-decoration: none;">annamcshmidt@gmail.com</a></p>
   </section>
 </body>
