--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
   <section id="contato">
     <h2>CONTATO</h2>
-    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcshmidt@gmail.com" style="color: #a883c9; text-decoration: none;">annamcshmidt@gmail.com</a></p>
+    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcshmidt@gmail.com" style="color: #a883c9; text-decoration: none;">annamcschmidt@icloud.com</a></p>
   </section>
 </body>
 </html>
