--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <li>💻 HTML, CSS e JavaScript</li>
       <li>⚙️ Versionamento com Git e GitHub</li>
       <li>🧠 Inteligência Artificial</li>
-      <li>💻 Desenvolvimento web</li>
+      <li>💻 Desenvolvimento Web</li>
     </ul>
   </section>
 
