--- a/index.html
+++ b/index.html
@@ -99,20 +99,30 @@
       margin-right: 1rem;
       font-size: 1.5rem;
     }
-    section#about, section#projects, section#contact, section#skills {
+
+    /* NOVO LAYOUT PADRONIZADO PARA TODAS AS SEÇÕES */
+    .section-block {
       padding: 4rem 2rem;
       background-color: #ffffff;
     }
-    section#about h2, section#projects h2, section#contact h2, section#skills h2 {
+    .section-block h2 {
       font-size: 2.5rem;
       color: #a883c9;
       margin-bottom: 1rem;
     }
-    section#about p, section#projects p, section#contact p, section#skills p {
+    .section-block p {
       font-size: 1.2rem;
       color: #333;
       line-height: 1.6;
       max-width: 800px;
+    }
+    .section-block a {
+      color: #a883c9;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .section-block a:hover {
+      text-decoration: underline;
     }
     .project-list a {
       display: block;
@@ -159,14 +169,14 @@
     </div>
   </section>
 
-  <section id="about">
+  <section id="about" class="section-block">
     <h2>SOBRE MIM</h2>
     <p>
-      Olá! Meu nome é Anna Schmidt, sou desenvolvedora full stack com foco em criar experiências digitais funcionais. Tenho especialização em HTML, CSS e JavaScript, com forte domínio em frameworks modernos para front-end e back-end. Trabalho com paixão no desenvolvimento de sites, aplicações web e interfaces, viso sempre buscar transformar ideias em projetos criativos. Também compartilho conteúdo sobre programação e tecnologia no meu Instagram @annaschmidt.dev. 
+      Olá! Meu nome é Anna Schmidt, sou desenvolvedora full stack com foco em criar experiências digitais funcionais. Tenho especialização em HTML, CSS e JavaScript, com forte domínio em frameworks modernos para front-end e back-end. Trabalho com paixão no desenvolvimento de sites, aplicações web e interfaces, viso sempre buscar transformar ideias em projetos criativos. Também compartilho conteúdo sobre programação e tecnologia no meu Instagram @annaschmidt.dev.
     </p>
   </section>
 
-  <section id="projetos">
+  <section id="projects" class="section-block">
     <h2>PROJETOS</h2>
     <div class="project-list">
       <a href="https://github.com/anninhaschmid/anninhaschmid.github.io" target="_blank">🌐 Projeto: Meu site pessoal - GitHub Pages</a>
@@ -174,7 +184,7 @@
     </div>
   </section>
 
-  <section id="habilidades">
+  <section id="skills" class="section-block">
     <h2>HABILIDADES</h2>
     <ul class="skill-list">
       <li>💻 HTML, CSS e JavaScript</li>
@@ -184,9 +194,9 @@
     </ul>
   </section>
 
-  <section id="contato">
+  <section id="contact" class="section-block">
     <h2>CONTATO</h2>
-    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcshmidt@gmail.com" style="color: #a883c9; text-decoration: none;">annamcschmidt@icloud.com</a></p>
+    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcschmidt@icloud.com">annamcschmidt@icloud.com</a></p>
   </section>
 </body>
 </html>
