--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <h2>PROJETOS</h2>
     <div class="project-list">
       <a href="https://github.com/anninhaschmid/anninhaschmid.github.io" target="_blank">🌐 Projeto: Meu site pessoal - GitHub Pages</a>
-      <a href="https://github.com/anninhaschmid/primeiro-projeto-em-py" target="_blank">🌐 Projeto: Primeiro Projeto em Python - GitHub</a>
+      <a href="https://github.com/anninhaschmid/FAP-MYSQL" target="_blank">🌐 Projeto: MYSQL - GitHub</a>
     </div>
   </section>
 
