--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
   <section id="contact" class="section-block">
     <h2>CONTATO</h2>
-    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcschmidt@icloud.com">annamcschmidt@icloud.com</a></p>
+    <p>Você pode entrar em contato comigo pelo e-mail: <a href="mailto:annamcshmidt@gmail.com">annamcshmidt@gmail.com</a></p>
   </section>
 </body>
 </html>
