--- a/style.html
+++ b/style.html
@@ -1,62 +1,120 @@
- <style>
+<style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
-      background-color: #fef6f0;
-      color: #333;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       overflow-x: hidden;
+      background-color: #1e1e2f;
+      color: #e0e0e0;
     }
+
+    /* Tema claro */
+    body.light-mode {
+      background-color: #fef6f0;
+      color: #333;
+    }
+
+    body.light-mode header {
+      background-color: #fff0f5;
+    }
+
+    body.light-mode .intro {
+      background-color: #fcefee;
+    }
+
+    body.light-mode .section-block {
+      background-color: #ffffff;
+    }
+
+    body.light-mode nav a {
+      color: #555;
+    }
+
+    body.light-mode nav a:hover {
+      color: #a883c9;
+    }
+
+    body.light-mode .intro-text h2,
+    body.light-mode .section-block p {
+      color: #333;
+    }
+
+    body.light-mode .btn {
+      border-color: #a883c9;
+      color: #a883c9;
+    }
+
+    body.light-mode .btn:hover {
+      background-color: #a883c9;
+      color: #fff;
+    }
+
+    body.light-mode .skill-list li {
+      color: #a883c9;
+    }
+
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 2rem;
-      background-color: #fff0f5;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      background-color: #2c2c3a;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
+
     header h1 {
       font-size: 2rem;
       color: #a883c9;
     }
+
     nav {
       display: flex;
       gap: 1rem;
+      flex-wrap: wrap;
     }
+
     nav a {
-      color: #555;
+      color: #bbb;
       text-decoration: none;
       font-weight: bold;
       transition: color 0.3s ease;
     }
+
     nav a:hover {
       color: #a883c9;
     }
+
     .intro {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 4rem 2rem;
-      background-color: #fcefee;
+      background-color: #2b2b38;
     }
+
     .intro-text {
       max-width: 50%;
     }
+
     .intro-text h2 {
       font-size: 3rem;
-      color: #222;
+      color: #e0e0e0;
     }
+
     .intro-text span {
       color: #a883c9;
     }
+
     .intro-text p {
       font-size: 1.2rem;
       margin: 1rem 0;
-      color: #444;
+      color: #ccc;
     }
+
     .btn {
       display: inline-block;
       background-color: transparent;
@@ -67,34 +125,52 @@
       font-weight: bold;
       text-decoration: none;
       margin-right: 1rem;
+      cursor: pointer;
     }
+
     .btn:hover {
       background-color: #a883c9;
       color: #fff;
     }
+
     .social-icons {
       margin-top: 1rem;
     }
+
     .social-icons a {
       color: #a883c9;
       margin-right: 1rem;
       font-size: 1.5rem;
     }
-    section#about, section#projects, section#contact, section#skills {
+
+    .section-block {
       padding: 4rem 2rem;
-      background-color: #ffffff;
+      background-color: #252535;
     }
-    section#about h2, section#projects h2, section#contact h2, section#skills h2 {
+
+    .section-block h2 {
       font-size: 2.5rem;
       color: #a883c9;
       margin-bottom: 1rem;
     }
-    section#about p, section#projects p, section#contact p, section#skills p {
+
+    .section-block p {
       font-size: 1.2rem;
-      color: #333;
+      color: #ccc;
       line-height: 1.6;
       max-width: 800px;
     }
+
+    .section-block a {
+      color: #a883c9;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .section-block a:hover {
+      text-decoration: underline;
+    }
+
     .project-list a {
       display: block;
       margin-top: 1rem;
@@ -102,15 +178,77 @@
       text-decoration: none;
       font-weight: bold;
     }
+
     .project-list a:hover {
       text-decoration: underline;
     }
+
     .skill-list {
       margin-top: 2rem;
     }
+
     .skill-list li {
       margin: 0.5rem 0;
       font-size: 1.2rem;
       color: #a883c9;
     }
-<style>
+
+    /* RESPONSIVIDADE */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1rem;
+      }
+
+      nav {
+        flex-direction: column;
+        gap: 0.5rem;
+        margin-top: 1rem;
+      }
+
+      .intro {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 2rem 1rem;
+      }
+
+      .intro-text {
+        max-width: 100%;
+      }
+
+      .intro-text h2 {
+        font-size: 2rem;
+      }
+
+      .intro-text p {
+        font-size: 1rem;
+      }
+
+      .btn {
+        margin-top: 1rem;
+        margin-right: 0;
+      }
+
+      .social-icons {
+        margin-top: 1rem;
+        font-size: 1.2rem;
+      }
+
+      .section-block {
+        padding: 2rem 1rem;
+      }
+
+      .section-block h2 {
+        font-size: 1.8rem;
+      }
+
+      .section-block p,
+      .skill-list li {
+        font-size: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  
