--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfólio Web de Anna Schmidt</title>
 
-  <meta name="description" content="Portfólio web de Anna Schmidt, Desenvolvedora Full Stack com foco em soluções front-end e back-end." />
+  <meta name="description" content="Portfólio web de Anna Schmidt, Desenvolvedora Front End com foco em soluções front-end e back-end." />
   <meta name="author" content="Anna Schmidt" />
   <meta name="robots" content="index, follow" />
   <meta property="og:title" content="Portfólio Web de Anna Schmidt" />
